optimisation SonarQube